<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="always"
    android:scrollbars="horizontal|vertical"
    tools:context=".tela_Menu">


    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="casual"
        android:includeFontPadding="false"
        android:text="@string/app_name"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/page3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/page3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:includeFontPadding="false"
        android:text="@string/page3"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/construction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />

    <Button
        android:id="@+id/construction"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:text="@string/construction"
        app:layout_constraintBottom_toTopOf="@+id/holes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page3" />

    <Button
        android:id="@+id/holes"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:text="@string/holes"
        app:layout_constraintBottom_toTopOf="@+id/lamp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/construction" />

    <Button
        android:id="@+id/lamp"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:text="@string/lamp"
        app:layout_constraintBottom_toTopOf="@+id/tree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/holes" />

    <Button
        android:id="@+id/tree"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:text="@string/tree"
        app:layout_constraintBottom_toTopOf="@+id/recycle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lamp" />



</androidx.constraintlayout.widget.ConstraintLayout>