<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tela_Cadastro">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="casual"
        android:includeFontPadding="false"
        android:text="@string/app_name"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/page2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="casual"
        android:includeFontPadding="false"
        android:text="@string/page2"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvTitulo"
        app:layout_constraintStart_toStartOf="@+id/tvTitulo"
        app:layout_constraintTop_toTopOf="@+id/tvTitulo" />

    <EditText
        android:id="@+id/account"
        android:layout_width="295dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/account"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/page2"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="@+id/page2"
        app:layout_constraintTop_toBottomOf="@+id/page2" />

    <EditText
        android:id="@+id/dado"
        android:layout_width="295dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="text|numberPassword"
        app:layout_constraintEnd_toEndOf="@+id/account"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/account"
        app:layout_constraintTop_toBottomOf="@+id/account" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="295dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="numberPassword|phone"
        app:layout_constraintEnd_toEndOf="@+id/dado"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/dado"
        app:layout_constraintTop_toBottomOf="@+id/dado" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="295dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/senha2"
        android:inputType="numberPassword|phone"
        app:layout_constraintEnd_toEndOf="@+id/phone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/phone"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <Button
        android:id="@+id/btAccount"
        android:layout_width="217dp"
        android:layout_height="50dp"
        android:layout_marginTop="96dp"
        android:text="@string/btAccount"
        app:layout_constraintEnd_toEndOf="@+id/phone"
        app:layout_constraintStart_toStartOf="@+id/phone"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="92dp"
        android:layout_height="73dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/btAccount"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/btAccount"
        app:layout_constraintTop_toBottomOf="@+id/btAccount"
        app:srcCompat="@drawable/logo_recife" />


</androidx.constraintlayout.widget.ConstraintLayout>