<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="casual"
        android:includeFontPadding="false"
        android:text="@string/app_name"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="295dp"
        android:layout_height="243dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@+id/tvTitulo"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="@+id/tvTitulo"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo"
        app:srcCompat="@drawable/marco_zero" />

    <EditText
        android:id="@+id/edUsuario"
        android:layout_width="295dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/edSenha"
        android:layout_width="295dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="@+id/edUsuario"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edUsuario"
        app:layout_constraintTop_toBottomOf="@+id/edUsuario" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/remember"
        app:layout_constraintStart_toStartOf="@+id/edSenha"
        app:layout_constraintTop_toBottomOf="@+id/edSenha" />

    <TextView
        android:id="@+id/newAccount"
        android:layout_width="119dp"
        android:layout_height="29dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/newAccount"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/edSenha" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="217dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/edSenha"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="@+id/edSenha"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="92dp"
        android:layout_height="73dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@+id/btLogin"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/btLogin"
        app:layout_constraintTop_toBottomOf="@+id/btLogin"
        app:srcCompat="@drawable/logo_recife" />



</androidx.constraintlayout.widget.ConstraintLayout>