<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tela_Greetings">
    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="casual"
        android:includeFontPadding="false"
        android:text="@string/app_name"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/page4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="casual"
        android:includeFontPadding="false"
        android:text="@string/Greetings"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvTitulo"
        app:layout_constraintStart_toStartOf="@+id/tvTitulo"
        app:layout_constraintTop_toTopOf="@+id/tvTitulo" />


    <TextView
        android:id="@+id/nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="casual"
        android:hint="@string/Greetings2"
        android:includeFontPadding="false"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/page4"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/page4"
        app:layout_constraintTop_toBottomOf="@+id/page4" />

    <TextView
        android:id="@+id/boa"
        android:layout_width="286dp"
        android:layout_height="137dp"
        android:layout_marginTop="8dp"
        android:elegantTextHeight="false"
        android:fontFamily="casual"
        android:gravity="fill_horizontal"
        android:hint="@string/msgGreet"
        android:includeFontPadding="false"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/nome"
        app:layout_constraintStart_toStartOf="@+id/nome"
        app:layout_constraintTop_toBottomOf="@+id/nome" />

    <Button
        android:id="@+id/btvolta"
        android:layout_width="217dp"
        android:layout_height="50dp"
        android:layout_marginTop="96dp"
        android:text="@string/select"
        app:layout_constraintEnd_toEndOf="@+id/boa"
        app:layout_constraintStart_toStartOf="@+id/boa"
        app:layout_constraintTop_toBottomOf="@+id/boa" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="92dp"
        android:layout_height="73dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/btvolta"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/btvolta"
        app:layout_constraintTop_toBottomOf="@+id/btvolta"
        app:srcCompat="@drawable/logo_recife" />
</androidx.constraintlayout.widget.ConstraintLayout>