<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tela_Service">


    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="casual"
        android:includeFontPadding="false"
        android:text="@string/app_name"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/page4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="casual"
        android:includeFontPadding="false"
        android:text="@string/page4"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvTitulo"
        app:layout_constraintStart_toStartOf="@+id/tvTitulo"
        app:layout_constraintTop_toTopOf="@+id/tvTitulo" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="293dp"
        android:layout_height="158dp"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="@+id/page4"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/page4"
        app:layout_constraintTop_toTopOf="@+id/page4"
        app:srcCompat="@android:drawable/ic_dialog_map" />

    <ImageButton
        android:id="@+id/Button2"
        android:layout_width="34dp"
        android:layout_height="38dp"
        android:layout_marginTop="172dp"
        app:layout_constraintEnd_toEndOf="@+id/image"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/image"
        app:layout_constraintTop_toTopOf="@+id/image" />

    <EditText
        android:id="@+id/Description"
        android:layout_width="285dp"
        android:layout_height="80dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/discription"
        app:layout_constraintEnd_toEndOf="@+id/Button2"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/Button2"
        app:layout_constraintTop_toTopOf="@+id/Button2" />

    <Button
        android:id="@+id/select"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/select"
        app:layout_constraintEnd_toEndOf="@+id/Description"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="@+id/Description"
        app:layout_constraintTop_toBottomOf="@+id/Description" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="92dp"
        android:layout_height="73dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/select"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="@+id/select"
        app:layout_constraintTop_toBottomOf="@+id/select"
        app:srcCompat="@drawable/logo_recife" />





</androidx.constraintlayout.widget.ConstraintLayout>